css/style.css
/* -------------------- UNIVERSAL -------------------- */

:root {

    --hoverGrey: hsl(230, 20%, 70%);
    --locationIcon: hsl(240, 87%, 65%);

    --bgColorLightMode: hsl(186, 67%, 91%);
    --txtColorLightMode: hsl(195, 8%, 9%);

    --bgColorDarkMode: hsl(217, 33%, 16%);
    --txtColorDarkMode: hsl(196, 27%, 92%);

    --bgColorHeadFoot: hsl(187, 68%, 95%);
    --bgColorSideNav: hsl(0, 0%, 100%, 0.8);

    --bgColorHeadFootDarkMode: hsl(217, 33%, 8%);
    --bgColorSideNavDarkMode: hsl(217, 33%, 8%, 0.8);
}

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    border: 0;
    outline: 0;
    font-family: Quicksand;
}

body {
    background-color: var(--bgColorLightMode);
    color: var(--txtColorLightMode);
    line-height: 2em;
}

img {
    max-width: 100%;
}

/* -------------------- HEADER -------------------- */

header {
    position: sticky;
    top: 0;
    width: 100vw;
    height: 5rem;
    padding: 1em;
    background-color: var(--bgColorHeadFoot);
    display: flex;
    align-items: center;
}

header>h2>a {
    font-family: Sacramento;
    text-align: center;
    font-size: 2em;
    text-decoration: none;
    color: var(--txtColorLightMode);
    background-color: hsl(0, 0%, 100%, 0.8);
    border-radius: 50%;
    width: 6vw;
}

header>span {
    position: absolute;
    right: 1em;
    font-size: 30px;
    cursor: pointer;
}

header>* {
    display: inline;
}

header a {
    text-decoration: none;
}

nav {
    height: 100%;
    width: 0;
    position: fixed;
    z-index: 1;
    top: 0;
    left: 0;
    background-color: var(--bgColorSideNav);
    overflow-x: hidden;
    transition: 1s;
    padding-top: 4em;
    text-align: right;
}

nav a {
    margin-top: 1em;
    margin-right: 1em;
    text-decoration: none;
    font-size: 25px;
    color: var(--txtColorLightMode);
    display: block;
    transition: 0.3s;

}

nav a:hover {
    color: var(--hoverGrey);
}

nav .active-page{
    font-weight: 900;
    text-shadow: 0.5px 0.5px, 0.5px 0.5px, 0.5px 0.5px;
}

nav .active-page:hover{
    color: var(--txtColorLightMode);
}

nav .close-nav-btn {
    position: absolute;
    top: 0;
    right: 0.5em;
    font-size: 2.5em;
    margin-top: 0.5em;
    margin-right: 0.5em;
}


/* -------------------- INDEX MAIN -------------------- */
.index-main{
    display: flex;
    flex-flow: row wrap;
    justify-content: space-evenly;
    flex-basis: 100%;
    margin-top: 4rem;
}

/*current weather*/
.weather-section{
    width: 100%;
}

.location-container{
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 5vw;
}

.location-container span{
    color: var(--locationIcon);
}

.current-temp-container{
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: 2rem;
}

.current-temp-container img{
    width: 25vw;
}

.current-temp-container h3{
    font-size: 7vw;
    font-weight: 1000;
}

.info-container{
    background-color: var(--bgColorHeadFoot);
    padding: 1rem;
    margin: 2rem 2rem 2rem;
}

.info-container div{
    display: flex;
    justify-content: space-between;
}

.info-container div span:nth-child(odd){
    text-align: left;
}

.info-container div span:nth-child(even){
    text-align: right;
}

.day-forecast-container{
    display: flex;
    justify-content: space-evenly;
    padding: 1rem;
    margin: 2rem 2rem 2rem;
    background-color: var(--bgColorHeadFoot);
}

.day-forecast-container div{
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;
}

#hourly-icon-container img{
    width: calc(100%/4);
}

/* -------------------- ABOUT MAIN -------------------- */

#about-article{
    margin: 1em;
    padding: 1em;
    /* border: 2px solid violet; */

    display: flex;
    flex-flow: row wrap;
    justify-content: space-evenly;
    align-items: center;
    text-align: center;
    gap: 2em;
}

#about-article section{
    display: flex;
    flex-flow: row wrap;
    justify-content: space-evenly;
    align-items: center;
    text-align: center;
    gap: 2em;
}

#about-article h1{
    font-weight: 900;
    text-shadow: 0px 1px, 1px 0px, 1px 1px;
    flex-basis: 100%;
}


/* -------------------- CONTACT MAIN -------------------- */

.contact-article{
    margin: 1em;
    padding: 1em;

    display: flex;
    flex-flow: row wrap;
    justify-content: space-evenly;
    align-items: center;
    text-align: center;
    gap: 3em;
}

.contact-article section{
    flex-basis: 100%;
}

.contact-article h1{
    margin: 1rem;
    font-weight: 900;
    text-shadow: 0px 1px, 1px 0px, 1px 1px;
}

.contact-article form{
    display: flex;
    flex-flow: column nowrap;
    align-items: center;
    gap: 1em;
    margin: 2rem;
}

.contact-article form #name, #e-mail, textarea{
    width: 90%;
}


/* -------------------- SEARCH -------------------- */
.search-container{
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    text-align: center;
    margin-top: 2rem;
}

.search-container form {
    width: 60%;
}

.search-bar {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-flow: row nowrap;
    background-color: white;
    border-radius: 1rem;
    border: 1px solid black;
    margin-top: 1rem;
}

.search-bar input {
    width: 100%;
    padding: 0 10px 0;
    border-radius: 1rem;
    border: 0;
    background-color: white;
}

.search-bar:hover {
    box-shadow: rgba(3, 102, 214, 0.3) 0px 0px 0px 3px;
}

button{
    margin-top: 1rem;
    background-color: white;
    padding: 0.4rem;
    border-radius: 10px; 
}

.search-box{
    display: flex;
    justify-content:space-evenly;
    align-items: center;
}

.search-page-articles{
    display: flex;
    flex-flow: row wrap;
    justify-content: center;
}

.search-page-articles div{
    flex-basis: 100%;
}

/* -------------------- FOOTER -------------------- */

footer{
    width: 100vw;
    height: 5rem;
    padding: 1em;
    background-color: var(--bgColorHeadFoot);

    display: flex;
    flex-flow: row nowrap;
    justify-content: space-between;
}


footer #soc-media-links{
    display: flex;
    flex-flow: row nowrap;
    justify-content: center;
}

#soc-media-links a img{
    max-width: 60%;
}


/* -------------------- DESKTOP -------------------- */


@media screen and (min-width: 600px) {

    /* -------------------- HEADER -------------------- */

    header>*{
        position: absolute;
    }

    .nav-toggler,
    .close-nav-btn {
        display: none;
    }

    nav {
        position: static;
        width: 100%;
        background-color: transparent;
        display: flex;
        flex-flow: row nowrap;
        justify-content: flex-end;
        padding: 0;
        margin: 0;
    }

    nav a {
        margin: 1em;
        font-size: .9em;
    }

    header h2 a{
        background-color: var(--bgColorHeadFoot);
    }

    header h2 a::after{
        content: 'eather forecast';
        color: var(--txtColorLightMode);
    }


    /* -------------------- INDEX  -------------------- */
    .index-main{
        flex-basis: 20%;
    }

    .weather-section{
        width: auto;
    }

    /* -------------------- ABOUT MAIN -------------------- */

    #about-article h1{
        margin-bottom: 1em;
    }

    #about-article p{
        flex-basis: 45%;
    }
    
    #about-article img{
        max-width: 45%;
    }

    #about-article #about-section2{
        flex-direction: row-reverse;
    }

    /* -------------------- CONTACT MAIN -------------------- */

    .contact-article section{
        flex-basis: 40%;
    }

    /* -------------------- SEARCH -------------------- */
    .search-page-articles div{
        flex-basis: 40%;
    }


    /* -------------------- FOOTER -------------------- */

    footer p{
        margin-top: 0.5em;
        margin-left: 1em;
    }

    #soc-media-links a img{
        max-width: 50%;
        margin-right: 2em;
    }

}

@media screen and (max-width: 800px) {
    
}

/* -------------------- DARK MODE -------------------- */

@media (prefers-color-scheme: dark) {
    body {
        background-color: var(--bgColorDarkMode);
        color: var(--txtColorDarkMode);
    }

    header {
        background-color: var(--bgColorHeadFootDarkMode);
    }

    header>h2>a {
        color: var(--txtColorDarkMode);
        background-color: var(--bgColorDarkMode);
    }

    nav a {
        color: var(--txtColorDarkMode);
    }

    nav .active-page:hover{
        color: var(--txtColorDarkMode);
    }

    nav {
        background-color: var(--bgColorSideNavDarkMode);
    }

    .info-container, .day-forecast-container{
        background-color: var(--bgColorHeadFootDarkMode);
    }

    footer {
        background-color: var(--bgColorHeadFootDarkMode);
    }

    footer img {
        background-color: var(--bgColorDarkMode);
        border-radius: 20%;
    }
}

/* -------------------- DARK MODE DESKTOP -------------------- */

@media (prefers-color-scheme: dark) and (min-width: 600px) {
    header h2 a::after{
        color: var(--txtColorDarkMode);
    }

    header>h2>a {
        background-color: var(--bgColorHeadFootDarkMode);
    }

    nav {
        background: transparent;
    }
}

